syntax = "proto3";

import "google/api/annotations.proto";

package auth;

option go_package = "./api";

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }
  rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
}

